--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%&libraries=services&autoload=false"
     ></script>
 
-    <title>React App</title>
+    <title>INCHEON PARKING</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
